Comparing with JIRA was added

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,5 +2,9 @@
   "Gitlab": {
     "Url": "http://srv-gitlab.techno.mos",
     "AccessToken": "<>"
+  },
+  "Jira": {
+    "Url": "https://jira.nspk.ru",
+    "BasicAuth": "username:password1234"
   }
 }
